# novel-downloader

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  tags.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  site_request.yml
.github/workflows/: bump.yml  check-sites.yml  ci.yml  release.yml  tag.yml  test-release.yml
config/: sample_rules.toml  sample_settings.yaml
docs/: 1-installation.md  2-configuration.md  2-environment-setup.md  3-configuration.md  3-settings-schema.md  4-settings-schema.md  4-supported-sites.md  5-cli-usage-examples.md  5-usage-examples.md  6-cli-usage-examples.md  6-supported-sites.md  6-web-usage-examples.md  ARCH.md  api.md  copy-cookies.md  develop.md  file-saving.md  index.md  plugins.md  todo.md
docs/api/: README.md  models.md  utils.md
docs/api/core/: README.md  downloaders.md  exporters.md  factory.md  fetchers.md  parsers.md  searchers.md
docs/data/: edge_languages.md  google_languages.md  qidian_app_func_H.md  qidian_app_func_Java_a_b_b.md  youdao_languages.md
docs/guide/: cli-examples.md  configuration.md  copy-cookies.md  file-saving.md  installation.md  processors-reference.md  settings-reference.md  web-examples.md
docs/misc/: todo.md
docs/notes/: aes.md  duokan_epub.md  faloo_web.md  linovelib.md  parse_js_iife.md  qidian_app.md  qidian_web.md  xiguashuwu.md
docs/reference/: api-examples.md  plugins.md
docs/supported-sites/: index.md
docs/supported-sites/site-details/: aaatxt.md  akatsuki_novels.md  alicesw.md  alphapolis.md  b520.md  biquge345.md  biquge5.md  biquguo.md  biquyuedu.md  bixiange.md  blqudu.md  bxwx9.md  ciluke.md  ciweimao.md  ciyuanji.md  czbooks.md  deqixs.md  dushu.md  dxmwx.md  esjzone.md  faloo.md  fanqienovel.md  fsshu.md  guidaye.md  haiwaishubao.md  hetushu.md  hongxiuzhao.md  i25zw.md  ixdzs8.md  jpxs123.md  kadokado.md  ktshu.md  kunnu.md  laoyaoxs.md  lewenn.md  linovel.md  linovelib.md  lnovel.md  lvsewx.md  mangg_com.md  (+51 more)
examples/: example_image_map.json  sample_settings.yaml
guide/cli-examples/: index.html
guide/configuration/: index.html
guide/copy-cookies/: index.html
guide/file-saving/: index.html
guide/installation/: index.html
guide/processors-reference/: index.html
guide/settings-reference/: index.html
guide/web-examples/: index.html
misc/todo/: index.html
notes/aes/: index.html
notes/duokan_epub/: index.html
notes/faloo_web/: index.html
notes/linovelib/: index.html
notes/parse_js_iife/: index.html
notes/qidian_app/: index.html
notes/qidian_web/: index.html
notes/xiguashuwu/: index.html
novel_downloader/: __init__.py
novel_downloader/cli/: __init__.py  clean.py  config.py  download.py  interactive.py  lang.py  main.py  parser.py  settings.py
novel_downloader/config/: __init__.py  adapter.py  loader.py  models.py  site_rules.py
novel_downloader/core/: __init__.py
novel_downloader/core/downloaders/: __init__.py  base.py  base_async_downloader.py  base_downloader.py  biquge.py  common.py  common_asynb_downloader.py  common_async.py  common_downloader.py  esjzone.py  linovelib.py  qianbi.py  qidian.py  qidian_downloader.py  sfacg.py  yamibo.py
novel_downloader/core/exporters/: biquge.py  yamibo.py
novel_downloader/core/factory/: __init__.py  downloader.py  downloader_factory.py  exporter.py  fetcher.py  parser.py  parser_factory.py  requester.py  requester_factory.py  saver.py  saver_factory.py
novel_downloader/core/fetchers/: __init__.py
novel_downloader/core/interfaces/: __init__.py  async_downloader.py  async_downloader_protocol.py  async_requester.py  async_requester_protocol.py  downloader.py  downloader_protocol.py  exporter.py  parser.py  parser_protocol.py  requester_protocol.py  saver.py  saver_protocol.py  sync_downloader.py  sync_requester.py
novel_downloader/core/parsers/: __init__.py  base.py  base_parser.py
novel_downloader/core/requesters/: __init__.py  base_async_session.py  base_browser.py  base_session.py
novel_downloader/core/savers/: __init__.py  base.py  base_saver.py  (+7 more)
novel_downloader/defaults/: base.yaml
novel_downloader/locales/: en.json  zh.json
novel_downloader/models/: __init__.py  chapter.py  config.py  login.py  tasks.py
novel_downloader/tui/: app.py  main.py
novel_downloader/utils/: __init__.py  cache.py  chapter_storage.py  constants.py  cookies.py  crypto_utils.py  hash_store.py  hash_utils.py  i18n.py  logger.py  model_loader.py  network.py  state.py
reference/api-examples/: index.html
reference/plugins/: index.html
scripts/: benchmark_aes.py  benchmark_chapter_export.py  check_md_links.py  check_sites_health.py  clean_cache.py  compile_mo.py  gen_site_docs.py  gen_site_health_config.py  http_backend_validation.ipynb  i18n_strings.py  site_data_tool.py  site_health_config.json  test_minijs.py  test_url_resolver.py  update_po.py  update_pot.py  validate_i18n.py  workflow_download.py
scripts/benchmark/: bench_upsert.py  benchmark_chapter_export.py
scripts/data/: .gitignore  site_health_config.json  site_test_data.json  supported_sites.toml
scripts/login_scripts/: esjzone_login.py  login.py  login_drissionpage.py  yamibo_login.py
search/: search_index.json
src/novel_downloader/: __init__.py  __main__.py
supported-sites/: index.html
supported-sites/tags/: index.html
tests/: conftest.py
tests/config/: test_adapter.py  test_loader.py  test_models.py
tests/data/: .gitignore
tests/infra/: test_book_url_resolver.py  test_cookie_store.py  test_cookies.py  test_i18n.py  test_logger.py  test_parse_cookies.py  test_sessions.py
tests/libs/: test_book_url_resolver.py  test_font_utils.py  test_imagekit.py  test_mini_js.py  test_time_utils.py
tests/plugins/: test_site_register.py
tests/utils/: test_crypto_utils.py  test_hash_store.py  test_hash_utils.py  test_i18n.py  test_logger.py  test_model_loader.py  test_network.py  test_state.py
(+1278 files in other folders)
