[project]
name = "novel-downloader"
description = "A command-line tool for downloading Chinese web novels from Qidian and similar platforms."
authors = [
    { name = "Saudade Z", email = "saudadez217@gmail.com" }
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["novel", "web novel", "qidian", "biquge", "downloader", "parser", "fiction", "cli", "automation", "ebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]
dependencies = [
    "requests",
    "beautifulsoup4",
    "DrissionPage",
    "pyyaml",
    "lxml",
    "platformdirs",
    "click",
    "ebooklib"
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pre-commit",
    "commitizen"
]

font-recovery = [
    "scipy",
    "numpy",
    "tinycss2",
    "fonttools",
    "pillow",
    "huggingface_hub"
]

[project.scripts]
novel-cli = "novel_downloader.cli.main:cli_main"

[project.urls]
Homepage = "https://github.com/BowenZ217/novel-downloader"
Source = "https://github.com/BowenZ217/novel-downloader"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["novel_downloader", "novel_downloader.*"]

[tool.setuptools.package-data]
"novel_downloader.resources.config" = ["settings.yaml", "rules.toml"]
"novel_downloader.resources.text" = ["*.txt"]
"novel_downloader.resources.js_scripts" = ["*.js"]
"novel_downloader.resources.json" = ["*.json"]
"novel_downloader.locales" = ["*.json"]
"novel_downloader.resources.css_styles" = ["*.css"]
"novel_downloader.resources.images" = ["*.png"]

[tool.setuptools.dynamic]
version = {attr = "novel_downloader.__version__"}

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
version_files = [
    "novel_downloader/__init__.py"
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
tag_format = "v$version"
bump_message = "chore(release): bump version to $new_version"
